fix overflow:hidden

--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@
   cursor: default;
 }
 
-.theme-menu__item:hover {
+.theme-menu__button:hover {
   color: var(--color-text);
   opacity: 0.6;
 }
@@ -130,7 +130,12 @@
 }
 
 .main_button-style {
+  display: flex;
   text-align: center;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
   background-color: var(--button-background);
   border: 2px solid var(--accent-color);
 } 
@@ -263,7 +268,6 @@
 }
 
 .card__like-button {
-  position: relative;
   margin: 0 25px 0 12px;
   min-width: 130px;
   min-height: 38px;
@@ -324,12 +328,7 @@
   gap: 8px;
   min-width: 306px;
   min-height: 80px;
-  display: flex;
-  align-items: center;
   flex-direction: column;
-  justify-content: center;
-  position: relative;
-  z-index: 1;
 }
 
 .footer-button::before {
@@ -365,11 +364,9 @@
 .dialog {
   padding: 0;
   max-width: 341px;
-  height: 191px;
   text-transform: uppercase;
   border: 4px solid var(--dialog-border);
   background: var(--dialog-background);
-  overflow: hidden;
 }
 
 dialog:not([open]) {
@@ -415,10 +412,6 @@ dialog::backdrop {
   margin-top: 30px;
   width: 257px;
   height: 38px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   text-transform: uppercase;
 }
 
@@ -500,8 +493,6 @@ dialog::backdrop {
     min-width: 335px;
     min-height: 55px;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
   }
 
   .floppy_svg{
